--- a/index.html
+++ b/index.html
@@ -3,12 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boys Bourbon Club - The BBC</title>
+    <title>Boys Bourbon Club - BBC - Tampa Bay Area</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="image-container">
-        <img src="images/lance.jpg" alt="Centerpiece Image">
-    </div>
+    <nav class="menu">
+        <a href="#events">Events</a>
+        <span class="separator">|</span>
+        <a href="#about">About</a>
+        <img src="images/logo.png" alt="Logo" class="logo">
+        <a href="#history">History</a>
+        <span class="separator">|</span>
+        <a href="#join">Join</a>
+    </nav>
+
+    <section id="events" class="section">
+        <h2>Events</h2>
+        <table class="events-table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Location</th>
+                    <th>Responsibilities</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>March 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>April 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>May 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>June 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>July 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>August 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>September 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>October 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>November 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td>December 2025</td>
+                    <td>TBD</td>
+                    <td>TBD</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="about" class="section">
+        <h2>About</h2>
+        <p>The Boys Bourbon Club, founded in 2024, is a community of bourbon enthusiasts located in the Tampa Bay area. Our founding members, Matt Mondok, Chad Bostak, Sean Christensen, Chip Folger, Lance Sturgis, and Chris Payne, came together with a shared passion for celebrating and studying different bourbons.</p>
+        <p>Our club's mission is to enjoy one another's company, savor good food, and contribute back to the community. We believe in the art of bourbon as a craft drink and are always eager to expand our circle with new members who share this appreciation.</p>
+        <p>Whether you're a seasoned bourbon connoisseur or just beginning your journey, the Boys Bourbon Club offers a welcoming environment to explore the rich history and diverse flavors of bourbon. Join us as we raise a glass to friendship, flavor, and philanthropy.</p>
+    </section>
+
+    <section id="history" class="section">
+        <h2>History</h2>
+        <table class="history-table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Bourbons</th>
+                    <th>Food</th>
+                    <th>Attendees</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>February 20, 2025</td>
+                    <td>Elijah Craig, Heaven Hill</td>
+                    <td>Steak Pickles, wings, mashed potatoes, spare ribs</td>
+                    <td>Matt Mondok, Chad Bostak, Sean Christensen, Lance Sturgis, Chris Payne</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="join" class="section">
+        <h2>Join</h2>
+        <p>Email Matt Mondok at <a href="mailto:matt.mondok@gmail.com">matt.mondok@gmail.com</a> for joining information.</p>
+    </section>
 </body>
 </html> 
