--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/logo.png" type="image/png">
+    <meta property="og:image" content="images/logo.png">
+    <meta property="og:title" content="Boys Bourbon Club - BBC - Tampa Bay Area">
+    <meta property="og:description" content="Join the Boys Bourbon Club to explore and celebrate the art of bourbon in the Tampa Bay area.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://yourwebsite.com"> <!-- Replace with your actual URL -->
 </head>
 <body>
     <nav class="menu">
