--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#e8b284">
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Home">
+    <meta name="twitter:title" content="Boys Bourbon Club - BBC">
     <meta name="twitter:description" content="Join the Tampa Bourbon Club to explore fine bourbons, share tasting notes, and connect with fellow enthusiasts. Founded by friends, our Florida bourbon community gathers for tastings, great food, and meaningful connections.">
     <meta property="og:title" content="Home">
     <meta property="og:description" content="Join the Tampa Bourbon Club to explore fine bourbons, share tasting notes, and connect with fellow enthusiasts. Founded by friends, our Florida bourbon community gathers for tastings, great food, and meaningful connections.">
