Update for Lance

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             </div>
             <div class="u-black u-container-style u-list-item u-opacity u-opacity-50 u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <h4 class="u-text u-text-palette-1-base u-text-4"> sean christensen</h4>
+                <h4 class="u-text u-text-palette-1-base u-text-4">sean christensen</h4>
                 <p class="u-text u-text-5">Vice President<br>Favorite Bourbon: Blanton's
                 </p>
               </div>
@@ -171,7 +171,7 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
             <div class="u-black u-container-style u-list-item u-opacity u-opacity-50 u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h4 class="u-text u-text-palette-1-base u-text-6">lance sturgis</h4>
-                <p class="u-text u-text-7">Chef de Cuisine<br>Favorite Bourbon:&nbsp; Hudson Rye
+                <p class="u-text u-text-7">Chef de Cuisine<br>Favorite Bourbon:&nbsp; Buffalo Trace
                 </p>
               </div>
             </div>
