--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0">
                     <a href="#home" class="flex items-center space-x-3">
-                        <img src="images/logo.png" alt="BBC Logo" class="h-14 w-14 rounded-full border-2 border-bourbon">
-                        <span class="text-bourbon text-2xl font-serif font-bold hidden sm:block">BBC</span>
+                        <img src="images/cube_logo.png" alt="BBC Logo" class="h-14 w-14 border-2 border-bourbon rounded-lg">
                     </a>
                 </div>
                 
@@ -263,7 +262,7 @@
     <section id="home" class="relative min-h-screen flex items-center justify-center bourbon-gradient leather-texture pt-20">
         <div class="absolute inset-0 bg-black/40"></div>
         <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center fade-in">
-            <img src="images/cube_logo.png" alt="BBC Cube Logo" class="mx-auto h-48 w-48 mb-8 drop-shadow-2xl">
+            <img src="images/logo.png" alt="BBC Logo" class="mx-auto h-48 w-48 mb-8 drop-shadow-2xl rounded-full">
             <h1 class="text-5xl md:text-7xl font-serif font-bold text-bourbon mb-6 drop-shadow-lg">
                 Boys Bourbon Club
             </h1>
@@ -486,10 +485,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-4xl md:text-5xl font-serif font-bold text-bourbon text-center mb-4">How to Join</h2>
             <div class="section-divider mb-8 max-w-md mx-auto"></div>
-            <p class="text-xl text-cream text-center italic mb-12 max-w-3xl mx-auto">
-                "Too much of anything is bad, but too much good whiskey is barely enough."<br>
-                <span class="text-bourbon">— Mark Twain</span>
-            </p>
+            <div class="max-w-3xl mx-auto mb-12 bg-black/40 backdrop-blur-sm rounded-xl p-6 border border-bourbon/30">
+                <p class="text-xl text-white text-center italic">
+                    "Too much of anything is bad, but too much good whiskey is barely enough."<br>
+                    <span class="text-bourbon font-bold">— Mark Twain</span>
+                </p>
+            </div>
             
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Step 1 -->
